objects/Time_Card__c.object
<CustomObject>
    <fields>
        <fullName>Fri_Hours__c</fullName>
        <label>Fri Hours</label>
        <summarizedField>Time_Card_Line__c.Fri__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mon_Hours__c</fullName>
        <label>Mon Hours</label>
        <summarizedField>Time_Card_Line__c.Mon__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Professional_Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Professional Service Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sat_Hours__c</fullName>
        <label>Sat Hours</label>
        <summarizedField>Time_Card_Line__c.Sat__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_Hours__c</fullName>
        <label>Sun Hours</label>
        <summarizedField>Time_Card_Line__c.Sun__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Thu_Hours__c</fullName>
        <label>Thu Hours</label>
        <summarizedField>Time_Card_Line__c.Thu__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tue_Hours__c</fullName>
        <label>Tue Hours</label>
        <summarizedField>Time_Card_Line__c.Tue__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Wed_Hours__c</fullName>
        <label>Wed Hours</label>
        <summarizedField>Time_Card_Line__c.Wed__c</summarizedField>
        <summaryForeignKey>Time_Card_Line__c.Time_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_End__c</fullName>
        <label>Week End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Week_Start__c</fullName>
        <label>Week Start</label>
        <type>Date</type>
    </fields>
    <label>Time Card</label>
    <nameField>
        <label>Time Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>